--- a/PhotoPasser/MainWindow.xaml
+++ b/PhotoPasser/MainWindow.xaml
@@ -12,7 +12,25 @@
     <Window.SystemBackdrop>
         <MicaBackdrop/>
     </Window.SystemBackdrop>
-    <Grid>
-        <Frame x:Name="contentFrame" SourcePageType="local:TaskOverview"/>
+    <Grid Padding="0">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="32"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <!--<StackPanel x:Name="TitlebarArea" 
+                Orientation="Horizontal" 
+                Height="32" 
+                HorizontalAlignment="Stretch" 
+                
+                Grid.Row="0" 
+                Padding="12,0,0,0" 
+                Spacing="12">
+            <TextBlock Style="{ThemeResource CaptionTextBlockStyle}" 
+                   HorizontalAlignment="Left" 
+                   VerticalAlignment="Center">Photo Passer</TextBlock>
+        </StackPanel>-->
+        <TitleBar x:Name="TitlebarArea" Grid.Row="0" Title="Photo Passer"/>
+        <Frame x:Name="contentFrame" CacheSize="4" SourcePageType="local:TaskOverview" Grid.Row="1"/>
+        
     </Grid>
 </Window>
