--- a/PhotoPasser/TaskOverview.xaml
+++ b/PhotoPasser/TaskOverview.xaml
@@ -12,6 +12,7 @@
     <Page.Resources>
         <conv:UriImageSourceConverter x:Key="UriImageSourceConverter"/>
         <helper:SelfReference Value="{x:Bind}" x:Key="PageSelf"/>
+        
     </Page.Resources>
     <Grid RowSpacing="36" Padding="36,40">
         <Grid.RowDefinitions>
@@ -35,13 +36,14 @@
                                   Height="200"
                                   Width="300"
                                   CornerRadius="{StaticResource OverlayCornerRadius}">
-                                <Image Source="{x:Bind PresentPhoto,Converter={StaticResource UriImageSourceConverter}}"/>
+                                <Image Source="{x:Bind PresentPhoto,Converter={StaticResource UriImageSourceConverter}}" Stretch="UniformToFill"/>
                                 <Rectangle HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                                     <Rectangle.Fill>
                                         <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
                                             <LinearGradientBrush.GradientStops>
                                                 <GradientStop Color="{ThemeResource CardBackgroundFillColorSecondaryTransparent}" Offset="0.0"/>
-                                                <GradientStop Color="{ThemeResource CardBackgroundFillColorSecondarySoild}" Offset="0.5"/>
+                                                <GradientStop Color="{ThemeResource CardBackgroundFillColorSecondaryTransparent}" Offset="0.2"/>
+                                                <GradientStop Color="{ThemeResource CardBackgroundFillColorSecondarySoild}" Offset="0.623"/>
                                                 <GradientStop Color="{ThemeResource CardBackgroundFillColorSecondarySoild}" Offset="1"/>
                                             </LinearGradientBrush.GradientStops>
                                         </LinearGradientBrush>
@@ -55,11 +57,11 @@
                                     <TextBlock Grid.Row="0" Style="{ThemeResource BodyStrongTextBlockStyle}" Text="{x:Bind Name}"/>
                                     <TextBlock Grid.Row="1" Style="{ThemeResource BodyTextBlockStyle}" TextWrapping="Wrap" VerticalAlignment="Stretch" Text="{x:Bind Description}"/>
                                 </Grid>
-                                <Button Name="OptionSettingButton" Visibility="Collapsed" HorizontalAlignment="Right" Style="{StaticResource SubtleButtonStyle}" VerticalAlignment="Top" Margin="8">
+                                <Button Name="OptionSettingButton" Visibility="Collapsed" HorizontalAlignment="Right" Style="{StaticResource DefaultButtonStyle}" VerticalAlignment="Top" Margin="8">
                                     <FontIcon Glyph="&#xE712;" />
                                     <Button.Flyout>
                                         <MenuFlyout>
-                                            <MenuFlyoutItem Text="Edit" Command="{Binding Value.ViewModel.EditTaskCommand, Source={StaticResource PageSelf}}" CommandParameter="{x:Bind}"/>
+                                            <MenuFlyoutItem Text="Edit Information" Command="{Binding Value.ViewModel.EditTaskCommand, Source={StaticResource PageSelf}}" CommandParameter="{x:Bind}"/>
                                             <MenuFlyoutItem Text="Delete" Command="{Binding Value.ViewModel.DeleteTaskCommand, Source={StaticResource PageSelf}}" CommandParameter="{x:Bind}"/>
                                         </MenuFlyout>
                                     </Button.Flyout>
