--- a/PhotoPasser/ProcessingPage.xaml
+++ b/PhotoPasser/ProcessingPage.xaml
@@ -53,22 +53,22 @@
                     <RowDefinition Height="*" />
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" Style="{ThemeResource TitleTextBlockStyle}">Create Result Information</TextBlock>
-                <TextBox Grid.Row="1" TextChanged="TextBox_TextChanged" Margin="0,36,0,0" Header="Name" Text="{x:Bind ViewModel.Name,Mode=TwoWay}"/>
-                <TextBox Grid.Row="2" Margin="0,16,0,0" Header="Description" Text="{x:Bind ViewModel.Description,Mode=TwoWay}" AcceptsReturn="True"/>
+                <TextBlock x:Uid="ms-resource:///ProcessingPage/CreateResultTitleTextBlock" Grid.Row="0" Style="{ThemeResource TitleTextBlockStyle}"/>
+                <TextBox x:Uid="ms-resource:///ProcessingPage/NameTextBox" Grid.Row="1" TextChanged="TextBox_TextChanged" Margin="0,36,0,0" Text="{x:Bind ViewModel.Name,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
+                <TextBox x:Uid="ms-resource:///ProcessingPage/DescriptionTextBox" Grid.Row="2" Margin="0,16,0,0" Text="{x:Bind ViewModel.Description,Mode=TwoWay}" AcceptsReturn="True"/>
 
                 <StackPanel Grid.Row="3" Margin="0,24,0,0" Spacing="8" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Center">
                     <Button Style="{ThemeResource DefaultButtonStyle}" x:Name="ExitButton" Click="ExitButton_Click">
                         <Button.KeyboardAccelerators>
                             <KeyboardAccelerator Key="Escape"/>
                         </Button.KeyboardAccelerators>
-                        <TextBlock>Exit</TextBlock>
+                        <TextBlock x:Uid="ms-resource:///ProcessingPage/ExitButtonTextBlock"/>
                     </Button>
-                    <Button Style="{ThemeResource AccentButtonStyle}" x:Name="StartButton" Click="StartButton_Click">
+                    <Button Style="{ThemeResource AccentButtonStyle}" IsEnabled="False" x:Name="StartButton" Click="StartButton_Click">
                         <Button.KeyboardAccelerators>
                             <KeyboardAccelerator Key="Enter"/>
                         </Button.KeyboardAccelerators>
-                        <TextBlock>Start</TextBlock>
+                        <TextBlock x:Uid="ms-resource:///ProcessingPage/StartButtonTextBlock"/>
                     </Button>
                 </StackPanel>
             </Grid>
@@ -88,7 +88,7 @@
                     </Grid.ColumnDefinitions>
                     <TextBlock Grid.Column="0" Text="{x:Bind ViewModel.Name,Mode=OneWay}" Style="{ThemeResource BodyLargeStrongTextBlockStyle}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
                     <TextBlock Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center" Style="{ThemeResource CaptionTextBlockStyle}" Foreground="{ThemeResource TextFillColorSecondary}">
-                        <Run Text="Created At"/>
+                        <Run x:Uid="ms-resource:///ProcessingPage/CreatedAtRun"/>
                         <Run Text="{x:Bind sys:DateTime.Now.ToString()}"/>
                     </TextBlock>
 
@@ -105,20 +105,20 @@
                                             <RowDefinition Height="Auto" />
                                         </Grid.RowDefinitions>
                                         <TextBlock TextAlignment="Left" Grid.Row="0">
-                                            Once it exit, all of progress will lose<LineBreak/>
-                                            Are you sure to exit?
+                                            <Run x:Uid="ms-resource:///ProcessingPage/ExitWarningRun"/><LineBreak/>
+                                            <Run x:Uid="ms-resource:///ProcessingPage/ExitConfirmRun"/>
                                         </TextBlock>
-                                        <Button Grid.Row="1" HorizontalAlignment="Right" Click="ExitButton_Click">Yes</Button>
+                                        <Button x:Uid="ms-resource:///Resources/YesButton" Grid.Row="1" HorizontalAlignment="Right" Click="ExitButton_Click"/>
                                     </Grid>
                                 </Flyout>
                             </Button.Flyout>
-                            <TextBlock>Exit</TextBlock>
+                            <TextBlock x:Uid="ms-resource:///ProcessingPage/HeaderExitButtonTextBlock"/>
                         </Button>
                         <Button Style="{ThemeResource AccentButtonStyle}" Click="FinishButton_Click" KeyboardAcceleratorPlacementMode="Hidden">
                             <Button.KeyboardAccelerators>
                                 <KeyboardAccelerator Key="Enter"/>
                             </Button.KeyboardAccelerators>
-                            <TextBlock>Finish</TextBlock>
+                            <TextBlock x:Uid="ms-resource:///ProcessingPage/FinishButtonTextBlock"/>
                         </Button>
                     </StackPanel>
 
@@ -132,26 +132,26 @@
                 </controls:PhotoFlipView>
                 <Grid Grid.Row="2" Padding="16,8" BorderBrush="{ThemeResource DividerStrokeColorDefault}" BorderThickness="0,1">
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Spacing="8">
-                        <AppBarButton x:Name="RejectButton" Click="RejectButton_Click" Icon="Clear" LabelPosition="Default" Label="Reject" HorizontalAlignment="Center">
+                        <AppBarButton x:Uid="ms-resource:///ProcessingPage/RejectAppBarButton" x:Name="RejectButton" Click="RejectButton_Click" Icon="Clear" LabelPosition="Default" HorizontalAlignment="Center">
                             <AppBarButton.KeyboardAccelerators>
                                 <KeyboardAccelerator Key="Down" Invoked="Reject_KeyboardAccelerator_Invoked"/>
                             </AppBarButton.KeyboardAccelerators>
                         </AppBarButton>
-                        <AppBarButton x:Name="AcceptButton" Click="AcceptButton_Click" Icon="Accept" LabelPosition="Default" Label="Accept" HorizontalAlignment="Center">
+                        <AppBarButton x:Uid="ms-resource:///ProcessingPage/AcceptAppBarButton" x:Name="AcceptButton" Click="AcceptButton_Click" Icon="Accept" LabelPosition="Default" HorizontalAlignment="Center">
                             <AppBarButton.KeyboardAccelerators>
                                 <KeyboardAccelerator Key="Up" Invoked="Accept_KeyboardAccelerator_Invoked"/>
                             </AppBarButton.KeyboardAccelerators>
                         </AppBarButton>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Center" Spacing="8">
-                        <TextBlock Text="Rejected" Style="{ThemeResource CaptionTextBlockStyle}" Foreground="{ThemeResource TextFillColorSecondary}"/>
+                        <TextBlock x:Uid="ms-resource:///ProcessingPage/RejectedLabelTextBlock" Style="{ThemeResource CaptionTextBlockStyle}" Foreground="{ThemeResource TextFillColorSecondary}"/>
                         <TextBlock Text="{x:Bind ViewModel.RejectedCount,Mode=OneWay}" Style="{ThemeResource CaptionTextBlockStyle}" Foreground="{ThemeResource TextFillColorSecondary}"/>
                         <TextBlock Text="{x:Bind CountToPrecentStr(ViewModel.RejectedCount, ViewModel.FiltingPhotos.Count),Mode=OneWay}" Style="{ThemeResource CaptionTextBlockStyle}" Foreground="{ThemeResource TextFillColorSecondary}"/>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Center" Spacing="8">
                         <TextBlock Text="{x:Bind CountToPrecentStr(ViewModel.AcceptedCount, ViewModel.FiltingPhotos.Count),Mode=OneWay}" Style="{ThemeResource CaptionTextBlockStyle}" Foreground="{ThemeResource TextFillColorSecondary}"/>
                         <TextBlock Text="{x:Bind ViewModel.AcceptedCount,Mode=OneWay}" Style="{ThemeResource CaptionTextBlockStyle}" Foreground="{ThemeResource TextFillColorSecondary}"/>
-                        <TextBlock Text="Accepted" Style="{ThemeResource CaptionTextBlockStyle}" Foreground="{ThemeResource TextFillColorSecondary}"/>
+                        <TextBlock x:Uid="ms-resource:///ProcessingPage/AcceptedLabelTextBlock" Style="{ThemeResource CaptionTextBlockStyle}" Foreground="{ThemeResource TextFillColorSecondary}"/>
                     </StackPanel>
                 </Grid>
                 <Grid Padding="16,12,16,8" Height="256" RowSpacing="12" Grid.Row="3" Background="{ThemeResource LayerFillColorDefault}">
@@ -160,7 +160,7 @@
                         <RowDefinition Height="1*" />
                     </Grid.RowDefinitions>
 
-                    <TextBlock Grid.Row="0" VerticalAlignment="Center" Style="{ThemeResource BodyStrongTextBlockStyle}">Photos</TextBlock>
+                    <TextBlock x:Uid="ms-resource:///ProcessingPage/PhotosHeaderTextBlock" Grid.Row="0" VerticalAlignment="Center" Style="{ThemeResource BodyStrongTextBlockStyle}"/>
                     <GridView SelectionChanged="GridView_SelectionChanged" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Visible" SelectedIndex="{x:Bind ImageViewFlipView.SelectedIndex,Mode=TwoWay}" HorizontalAlignment="Stretch" Grid.Row="1" ItemsSource="{x:Bind ViewModel.FiltingPhotos,Mode=OneWay}">
                         <GridView.ItemsPanel>
                             <ItemsPanelTemplate>
