--- a/PhotoPasser/ResultView.xaml
+++ b/PhotoPasser/ResultView.xaml
@@ -24,27 +24,27 @@
             </Grid.ColumnDefinitions>
             <TextBlock Grid.Column="0" Text="{x:Bind ViewModel.CurrentResult.Name,Mode=OneWay}" Style="{ThemeResource BodyLargeStrongTextBlockStyle}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
             <TextBlock Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center" Style="{ThemeResource CaptionTextBlockStyle}" Foreground="{ThemeResource TextFillColorSecondary}">
-            <Run Text="Created At"/>
-            <Run Text="{x:Bind ViewModel.CurrentResult.Date,Mode=OneWay}"/>
+                <Run x:Uid="ms-resource:///ProcessingPage/CreatedAtRun"/>
+                <Run Text="{x:Bind ViewModel.CurrentResult.Date,Mode=OneWay}"/>
             </TextBlock>
             <tk:Segmented Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center" Name="ViewSelector" SelectedIndex="0">
                 <tk:SegmentedItem Tag="DetailView">
                     <tk:SegmentedItem.Icon>
                         <FontIcon Glyph="&#xE8A1;" />
                     </tk:SegmentedItem.Icon>
-                    <TextBlock>Detail</TextBlock>
+                    <TextBlock x:Uid="ms-resource:///ResultView/DetailViewSelectionLabel"/>
                 </tk:SegmentedItem>
                 <tk:SegmentedItem Tag="FlipView">
                     <tk:SegmentedItem.Icon>
                         <FontIcon Glyph="&#xE799;" />
                     </tk:SegmentedItem.Icon>
-                    <TextBlock>Flip View</TextBlock>
+                    <TextBlock x:Uid="ms-resource:///ResultView/FlipViewSelectionLabel"/>
                 </tk:SegmentedItem>
                 <tk:SegmentedItem Tag="LibraryView">
                     <tk:SegmentedItem.Icon>
                         <FontIcon Glyph="&#xF0E2;" />
                     </tk:SegmentedItem.Icon>
-                    <TextBlock>Library View</TextBlock>
+                    <TextBlock x:Uid="ms-resource:///ResultView/LibraryViewSelectionLabel"/>
                 </tk:SegmentedItem>
             </tk:Segmented>
         </Grid>
@@ -65,7 +65,7 @@
                             <Border Background="{ThemeResource LayerFillColorDefault}" CornerRadius="{ThemeResource ControlCornerRadius}">
                                 <Image Source="{x:Bind ViewModel.CurrentResult.Photos[0].Path, Converter={StaticResource UriImageSourceConverter}, Mode=OneWay}" Stretch="UniformToFill" />
                             </Border>
-                            <Border VerticalAlignment="Center" HorizontalAlignment="Right" Width="333" Height="250" Grid.Row="0" Background="{StaticResource PhotoBackgroundAcrylicFillColorDefaultBrush}" CornerRadius="{ThemeResource ControlCornerRadius}" BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}" BorderThickness="1">
+                            <Border VerticalAlignment="Center" HorizontalAlignment="Right" Width="333" Height="250" Margin="-1" Grid.Row="0" Background="{StaticResource PhotoBackgroundAcrylicFillColorDefaultBrush}" CornerRadius="{ThemeResource ControlCornerRadius}" BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}" BorderThickness="1">
                                 <Image Source="{x:Bind ViewModel.CurrentResult.Photos[0].Path, Converter={StaticResource UriImageSourceConverter}, Mode=OneWay}" Stretch="Uniform" />
                             </Border>
                         </Grid>
@@ -86,14 +86,14 @@
                                     <Style TargetType="TextBlock" BasedOn="{StaticResource CaptionTextBlockStyle}">
                                     </Style>
                                 </StackPanel.Resources>
-                                <TextBlock><Run Text="{x:Bind ViewModel.CurrentResult.Photos.Count, Mode=OneWay}"/> photos</TextBlock>
-                                <TextBlock><Run Text="{x:Bind GetSelectedItemTotalSize(ViewModel.CurrentResult.Photos), Mode=OneWay}"/> size</TextBlock>
+                                <TextBlock><Run Text="{x:Bind ViewModel.CurrentResult.Photos.Count, Mode=OneWay}"/> <Run x:Uid="ms-resource:///ResultView/PhotosCountUiSuffix"/></TextBlock>
+                                <TextBlock><Run Text="{x:Bind GetSelectedItemTotalSize(ViewModel.CurrentResult.Photos), Mode=OneWay}"/></TextBlock>
                             </StackPanel>
                             <CommandBar Grid.Row="4">
-                                <AppBarButton x:Name="FavoriteButton" Icon="{x:Bind ViewModel.CurrentResult.IsFavorite,Mode=OneWay,Converter={StaticResource FavoriteIconElementConverter}}" Label="Favorite" Click="FavoriteButton_Click"/>
+                                <AppBarButton x:Name="FavoriteButton" x:Uid="ms-resource:///ResultView/FavoriteButton" Icon="{x:Bind ViewModel.CurrentResult.IsFavorite,Mode=OneWay,Converter={StaticResource FavoriteIconElementConverter}}" Click="FavoriteButton_Click"/>
                                 <AppBarSeparator/>
-                                <AppBarButton x:Name="EditButton" Icon="Edit" Label="Edit Information" Click="EditButton_Click"/>
-                                <AppBarButton x:Name="DeleteButton" Icon="Delete" Label="Delete">
+                                <AppBarButton x:Name="EditButton" x:Uid="ms-resource:///ResultView/EditButton" Icon="Edit" Click="EditButton_Click"/>
+                                <AppBarButton x:Name="DeleteButton" x:Uid="ms-resource:///ResultView/DeleteButton" Icon="Delete">
                                     <AppBarButton.Flyout>
                                         <Flyout>
                                             <Grid RowSpacing="8" Padding="8">
@@ -101,15 +101,15 @@
                                                     <RowDefinition Height="Auto" />
                                                     <RowDefinition Height="Auto" />
                                                 </Grid.RowDefinitions>
-                                                <TextBlock Grid.Row="0">Are you sure you want to delete the result?</TextBlock>
-                                                <Button Grid.Row="1" HorizontalAlignment="Right" Click="DeleteButton_Click">Delete</Button>
+                                                <TextBlock Grid.Row="0" x:Uid="ms-resource:///ResultView/DeleteResultTip"/>
+                                                <Button Grid.Row="1" HorizontalAlignment="Right" Click="DeleteButton_Click" x:Uid="ms-resource:///ResultView/RealDeleteButton"/>
                                             </Grid>
                                         </Flyout>
                                     </AppBarButton.Flyout>
                                 </AppBarButton>
                                 <AppBarSeparator/>
-                                <AppBarButton x:Name="GotoFileExplorerButton" Icon="OpenLocal" Label="View in File Explorer" Click="GotoFileExplorerButton_Click"/>
-                                <AppBarButton x:Name="ExportButton" Label="Export" Click="ExportButton_Click">
+                                <AppBarButton x:Name="GotoFileExplorerButton" x:Uid="ms-resource:///ResultView/GotoFileExplorerButton" Icon="OpenLocal" Click="GotoFileExplorerButton_Click"/>
+                                <AppBarButton x:Name="ExportButton" x:Uid="ms-resource:///ResultView/ExportButton" Click="ExportButton_Click">
                                     <AppBarButton.Icon>
                                         <FontIcon Glyph="&#xE7B8;" />
                                     </AppBarButton.Icon>
@@ -122,7 +122,7 @@
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="1*" />
                         </Grid.RowDefinitions>
-                        <TextBlock Grid.Row="0" VerticalAlignment="Center" Style="{ThemeResource BodyStrongTextBlockStyle}">Pinnned Photos</TextBlock>
+                        <TextBlock Grid.Row="0" VerticalAlignment="Center" Style="{ThemeResource BodyStrongTextBlockStyle}" x:Uid="ms-resource:///ResultView/PinnedPhotosHeader"/>
                         <GridView HorizontalAlignment="Center" SelectionChanged="GridView_SelectionChanged" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Visible" SelectedIndex="0" Grid.Row="1" ItemsSource="{x:Bind ViewModel.CurrentResult.PinnedPhotos,Mode=OneWay}">
                             <GridView.ItemTemplate>
                                 <DataTemplate x:DataType="local:PhotoInfo">
@@ -185,7 +185,7 @@
                             <RowDefinition Height="1*" />
                         </Grid.RowDefinitions>
 
-                        <TextBlock Grid.Row="0" VerticalAlignment="Center" Style="{ThemeResource BodyStrongTextBlockStyle}">Photos</TextBlock>
+                        <TextBlock Grid.Row="0" VerticalAlignment="Center" Style="{ThemeResource BodyStrongTextBlockStyle}" x:Uid="ms-resource:///ResultView/PhotosSequenceHeader"/>
                         <GridView SelectionChanged="GridView_SelectionChanged" ItemTemplate="{StaticResource PhotoTransitionStyledItem}" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Visible" SelectedIndex="{x:Bind ImageViewFlipView.SelectedIndex,Mode=TwoWay}" HorizontalAlignment="Stretch" Grid.Row="1" ItemsSource="{x:Bind ViewModel.CurrentResult.Photos,Mode=OneWay}">
                             <GridView.ItemsPanel>
                                 <ItemsPanelTemplate>
@@ -214,7 +214,7 @@
                                          x:Name="ResultGalleryView">
                     <controls:PhotoGalleryViewer.ExtendedOperations>
                         <controls:PhotoItemOperation x:Name="PinPhoto" 
-                                                     OperationName="Pin" 
+                                                     x:Uid="ms-resource:///ResultView/PinPhotoOperation"
                                                      ShowAtCommandBar="True" 
                                                      Invoked="PinPhoto_Invoked" 
                                                      Mode="Both">
@@ -222,7 +222,7 @@
                                 <SymbolIcon Symbol="Pin"/>
                             </controls:PhotoItemOperation.DescriptiveIcon>
                         </controls:PhotoItemOperation>
-                        <controls:PhotoGeneralOperation OperationName="Continue to filter" 
+                        <controls:PhotoGeneralOperation x:Uid="ms-resource:///ResultView/ContinueToFilterOperation"
                                                         ShowAtCommandBar="True" 
                                                         Invoked="ContinueToFilter_PhotoGeneralOperation_Invoked">
                             <controls:PhotoGeneralOperation.DescriptiveIcon>
@@ -230,7 +230,7 @@
                             </controls:PhotoGeneralOperation.DescriptiveIcon>
                         </controls:PhotoGeneralOperation>
                         <controls:PhotoItemOperation x:Name="ContinueToFilterBasedOnSelected" 
-                                                     OperationName="Filter based on selected" 
+                                                     x:Uid="ms-resource:///ResultView/ContinueToFilterBasedOnSelectedOperation"
                                                      ShowAtCommandBar="False" 
                                                      Invoked="ContinueToFilterBasedOnSelected_Invoked" 
                                                      Mode="Multiply">
@@ -239,7 +239,6 @@
                             </controls:PhotoItemOperation.DescriptiveIcon>
                         </controls:PhotoItemOperation>
                     </controls:PhotoGalleryViewer.ExtendedOperations>
-                    
                 </controls:PhotoGalleryViewer>
             </tk:Case>
         </tk:SwitchPresenter>
