--- a/PhotoPasser/TaskWorkspace.xaml
+++ b/PhotoPasser/TaskWorkspace.xaml
@@ -47,7 +47,7 @@
                                        FalseObject="Disabled"/>
     </Page.Resources>
     <NavigationView x:Name="NavigationViewer" 
-                    IsSettingsVisible="True" 
+                    IsSettingsVisible="false" 
                     SelectionChanged="NavigationViewer_SelectionChanged" 
                     IsBackButtonVisible="Collapsed" 
                     ExpandedModeThresholdWidth="1350" 
@@ -175,7 +175,7 @@
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
                     <TextBlock Grid.Row="0" x:Uid="ms-resource:///TaskWorkspace/PropertiesViewTitle" Style="{ThemeResource TitleTextBlockStyle}"/>
-                    
+
                     <StackPanel Grid.Row="1" Spacing="4">
                         <tk:SettingsCard x:Uid="ms-resource:///TaskWorkspace/NameProperty">
                             <tk:SettingsCard.HeaderIcon>
@@ -200,42 +200,6 @@
                                 <FontIcon Glyph="&#xE8C8;" />
                             </tk:SettingsCard.HeaderIcon>
                             <TextBlock Foreground="{ThemeResource TextFillColorSecondary}" Text="{x:Bind ViewModel.FiltTask.CopySource,Converter={StaticResource EnabledTextConverter}}"/>
-                        </tk:SettingsCard>
-                    </StackPanel>
-                </Grid>
-            </tk:Case>
-            <tk:Case Value="Setting">
-                <Grid Padding="36,40" RowSpacing="36">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="*" />
-                    </Grid.RowDefinitions>
-                    <TextBlock Grid.Row="0" x:Uid="ms-resource:///TaskWorkspace/SettingsViewTitle" Style="{ThemeResource TitleTextBlockStyle}"/>
-                    <StackPanel Grid.Row="1" Spacing="4">
-                        <tk:SettingsCard x:Uid="ms-resource:///TaskWorkspace/AppThemeSetting">
-                            <tk:SettingsCard.HeaderIcon>
-                                <FontIcon Glyph="&#xE790;" />
-                            </tk:SettingsCard.HeaderIcon>
-                            <ComboBox SelectedIndex="{x:Bind p:SettingProvider.Instance.RequestedTheme,Mode=TwoWay}">
-                                <ComboBoxItem x:Uid="ms-resource:///TaskWorkspace/SystemThemeItem"/>
-                                <ComboBoxItem x:Uid="ms-resource:///TaskWorkspace/LightThemeItem"/>
-                                <ComboBoxItem x:Uid="ms-resource:///TaskWorkspace/DarkThemeItem"/>
-                            </ComboBox>
-                        </tk:SettingsCard>
-                        <tk:SettingsCard x:Uid="ms-resource:///TaskWorkspace/LanguageSetting">
-                            <tk:SettingsCard.HeaderIcon>
-                                <FontIcon Glyph="&#xE774;" />
-                            </tk:SettingsCard.HeaderIcon>
-                            <ComboBox SelectedIndex="{x:Bind p:SettingProvider.Instance.Language,Mode=TwoWay}">
-                                <ComboBoxItem>简体中文</ComboBoxItem>
-                                <ComboBoxItem>English(United State)</ComboBoxItem>
-                            </ComboBox>
-                        </tk:SettingsCard>
-                        <tk:SettingsCard x:Uid="ms-resource:///TaskWorkspace/AdvancedImageViewSetting">
-                            <tk:SettingsCard.HeaderIcon>
-                                <FontIcon Glyph="&#xE752;" />
-                            </tk:SettingsCard.HeaderIcon>
-                            <ToggleSwitch IsOn="{x:Bind p:SettingProvider.Instance.AdvancedImageView,Mode=TwoWay}"/>
                         </tk:SettingsCard>
                     </StackPanel>
                 </Grid>
